fixup! horizontal scrolll at code

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -4,4 +4,6 @@
 
 .highlighter-rouge {
   overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
 }
